보고서 화면 수정 1. 헤더부분 별도 추가

--- a/src/main/resources/public/assets/css/report.css
+++ b/src/main/resources/public/assets/css/report.css
@@ -880,6 +880,19 @@ input, button, select, optgroup, textarea {
   mask-position: center;
 }
 
+/* _layout.scss
+ *
+ * 파일 경로 : template/_layout.scss
+ * @description HTML layout 관련 디자인
+ * @author jy.lim
+ * @version 1.0
+ */
+.z-wrapper {
+  display: flex;
+  max-width: 120rem;
+  margin: 0 auto;
+}
+
 /* _preview.scss
  *
  * 파일 경로 : report/_preview.scss
