--- a/src/main/resources/public/template/report/reportView.html
+++ b/src/main/resources/public/template/report/reportView.html
@@ -62,9 +62,9 @@
             }
 
             // print
-            /*setTimeout(function() {
+            setTimeout(function() {
                 window.print();
-            }, 500);*/
+            }, 500);
         };
 
         function addChartContent(data) {
