--- a/src/main/resources/public/scss/formDesigner/_properties.scss
+++ b/src/main/resources/public/scss/formDesigner/_properties.scss
@@ -27,7 +27,11 @@
   .property-label {
     font-size: $property-label-font-size;
     color: $property-label-color;
-    padding-bottom: 0.625rem; // 10px
+
+    .property-label-text {
+      display: inline-block;
+      padding-bottom: 0.625rem; // 10px
+    }
   }
   .property-value {
     width: 2.813rem !important; // 45px
@@ -58,16 +62,16 @@
     font-size: $property-font-size;
     vertical-align: middle;
 
-    &.icon-unit-search {
+    &.i-unit-search {
       background: url($icon-folder-path + "formDesigner/unit/icon_unit_search.svg") no-repeat 100%-3 50%;
       background-color: $element-bg-color;
-      padding-right: 1.875rem; // 30px
+      padding: 0 1.875rem 0 0.5rem; // 0 30px 0 8px
     }
 
-    &.icon-unit-px {
+    &.i-unit-px {
       background: url($icon-folder-path + "formDesigner/unit/icon_unit_px.svg") no-repeat calc(100% - 0.5rem) 50%;
       background-color: $element-bg-color;
-      padding-right: 1.875rem; // 30px
+      padding: 0 1.875rem 0 0.5rem; // 0 30px 0 8px
       text-align: right;
 
       &:not(:last-child) {
@@ -140,23 +144,20 @@
       flex-wrap: wrap;
       margin: 0.3125rem 0; // 5px 0
 
+      .z-radio { margin-right: 0; }
+
       .radio-item {
         .z-input {
           width: 2.813rem; // 45px
-          margin: 0 0.3125rem 0 0; // 5px
+          margin-right: 0.3125rem; // 5px
+          padding: 0 0.5rem; // 0 8px
+          &:not(:first-child) {
+            margin-left: 0.3125rem; // 5px
+          }
         }
       }
 
-      .picker-wrapper-date {
-        display: inline-block;
-        width: auto;
-        .datepicker,
-        .timepicker,
-        .datetimepicker {
-          width: 260px; // 260px
-          margin: 0;
-        }
-      }
+      .z-picker-wrapper-date { flex: 1; }
     }
   }
   // tab
@@ -194,7 +195,7 @@
           }
         }
 
-        .z-button {
+        .z-button-icon {
           padding: 0;
           .z-icon {
             display: inline-block;
