--- a/src/main/resources/public/template/formDesigner/formDesigner.html
+++ b/src/main/resources/public/template/formDesigner/formDesigner.html
@@ -12,7 +12,7 @@
     <script th:src="@{/assets/vendors/sortableJS/sortable.js}"></script>
     <script type="module">
         // 사용자 세션 정보 저장
-        import { SESSION, CLASS_PREFIX } from '../../assets/js/lib/zConstants.js';
+        import { SESSION } from '../../assets/js/lib/zConstants.js';
         import { zFormDesigner } from '../../assets/js/formDesigner/zFormDesigner.js';
 
         const userSession = {
@@ -41,7 +41,7 @@
         console.log(zFormDesigner);
 
         window.addEventListener('DOMContentLoaded', function() {
-            document.querySelectorAll('.' + CLASS_PREFIX + 'header-button-dropdown').forEach(function (dropdown) {
+            document.querySelectorAll('.z-header-button-dropdown').forEach(function (dropdown) {
                 dropdown.addEventListener('click', function (e) {
                     e.preventDefault();
 
