#11096 [신청서 문서 양식] 상태에 따라 처리할 문서 '편집가능' , '숨김' , '읽기전용' 처리: input, textarea, checkbox, radio, dropdown 적용

--- a/src/main/resources/public/scss/formDesigner/_form.scss
+++ b/src/main/resources/public/scss/formDesigner/_form.scss
@@ -26,6 +26,10 @@
   &[data-displaytype='document.displayType.hidden'] {
     display: none;
   }
+  // displayType이 readonly일 경우
+  &[data-displaytype='document.displayType.readonly'] {
+    
+  }
 }
 // 그룹
 .z-group {
