--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -1736,51 +1736,6 @@ a:active {
   text-decoration: none;
 }
 
-textarea:not(.z-textarea) {
-  font-family: inherit;
-  font-size: 0.875rem;
-  font-weight: 400;
-  line-height: 1.2;
-  color: #222529;
-  background-color: #FFFFFF;
-  border: 0.0625rem solid #CFD5D9;
-  border-radius: 0.0625rem;
-  -webkit-border-radius: 0.0625rem;
-  -moz-border-radius: 0.0625rem;
-  padding: 0.5rem 1rem 0.5rem 1rem;
-  resize: vertical;
-}
-textarea:not(.z-textarea)::placeholder {
-  color: #ABB0B5;
-}
-textarea:not(.z-textarea):not(:disabled):focus, textarea:not(.z-textarea):not(:read-only):focus {
-  outline: 0;
-  border: 0.0625rem solid #2578CE;
-}
-textarea:not(.z-textarea):not(:disabled):hover, textarea:not(.z-textarea):not(:read-only):hover {
-  outline: 0;
-  border: 0.0625rem solid #64BBF6;
-  -webkit-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
-  -moz-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
-  box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
-}
-textarea:not(.z-textarea):disabled {
-  color: #ABB0B5;
-  background-color: #EEEEEE;
-  pointer-events: none;
-  cursor: default;
-}
-textarea:not(.z-textarea):read-only {
-  background-color: #EEEEEE;
-  border-color: #ABB0B5;
-  pointer-events: none;
-  cursor: default;
-}
-textarea:not(.z-textarea).error {
-  color: #ff405a !important;
-  border: 0.0625rem solid #ff405a !important;
-}
-
 table {
   table-layout: fixed;
   border-collapse: collapse;
@@ -1917,13 +1872,13 @@ label {
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.2;
-  color: #212121;
+  color: #222529;
   background-color: #FFFFFF;
   border: 0.0625rem solid #CFD5D9;
   border-radius: 0.125rem;
   -webkit-border-radius: 0.125rem;
   -moz-border-radius: 0.125rem;
-  padding: 0 0.9375rem;
+  padding: 0 1rem;
   vertical-align: middle;
 }
 .z-input::placeholder {
@@ -1931,45 +1886,45 @@ label {
 }
 .z-input:not(:disabled):hover, .z-input:not(:read-only):hover {
   outline: 0;
-  border-color: #64BBF6;
+  border: 0.0625rem solid #64BBF6;
 }
 .z-input:not(:disabled):focus, .z-input:not(:read-only):focus {
   outline: 0;
-  border-color: #2578CE;
-  -webkit-box-shadow: 0 0 0.125rem 0 #2578ce;
-  -moz-box-shadow: 0 0 0.125rem 0 #2578ce;
-  box-shadow: 0 0 0.125rem 0 #2578ce;
+  border: 0.0625rem solid #2578CE;
+  -webkit-box-shadow: 0 0 0.125rem 0 #2578CE;
+  -moz-box-shadow: 0 0 0.125rem 0 #2578CE;
+  box-shadow: 0 0 0.125rem 0 #2578CE;
 }
 .z-input:not(:disabled):focus[data-error], .z-input:not(:read-only):focus[data-error] {
-  border: 0.0625rem solid #ff405a;
+  border: 0.0625rem solid #F52525;
   -webkit-box-shadow: 0 0 0 0 #FFFFFF;
   -moz-box-shadow: 0 0 0 0 #FFFFFF;
   box-shadow: 0 0 0 0 #FFFFFF;
 }
 .z-input:not(:disabled):focus[data-success], .z-input:not(:read-only):focus[data-success] {
-  border: 0.0625rem solid #5CA21B;
+  border: 0.0625rem solid #76BD26;
   -webkit-box-shadow: 0 0 0 0 #FFFFFF;
   -moz-box-shadow: 0 0 0 0 #FFFFFF;
   box-shadow: 0 0 0 0 #FFFFFF;
 }
 .z-input:not(:disabled):active, .z-input:not(:read-only):active {
   outline: 0;
-  border: 0.0625rem solid #339AF0;
+  border: 0.0625rem solid #2578CE;
 }
 .z-input:read-only:not(.tagify) {
-  border-color: #ABB0B5;
-  border-style: none none none solid;
+  background-color: #FFFFFF;
+  border: none;
+  border-left: 0.0625rem solid #ABB0B5;
   border-radius: 0;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
-  background-color: #FFFFFF;
   pointer-events: none;
   cursor: default;
 }
 .z-input:disabled {
   color: #ABB0B5;
   background-color: #EEEEEE;
-  border-color: #CFD5D9;
+  border: 0.0625rem solid #CFD5D9;
   pointer-events: none;
   cursor: default;
 }
@@ -2068,9 +2023,9 @@ label {
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.2;
-  color: #212121;
+  color: #222529;
   background-color: #FFFFFF;
-  padding: 0.5rem 1rem 0.5rem 1rem;
+  padding: 0.5rem 1rem;
 }
 .z-textarea:not(.os-textarea) {
   border: 0.0625rem solid #CFD5D9;
@@ -2081,34 +2036,36 @@ label {
 .z-textarea::placeholder {
   color: #ABB0B5;
 }
-.z-textarea:not(:disabled):focus {
+.z-textarea:not(:disabled):focus, .z-textarea:not(:read-only):focus {
   outline: 0;
   border: 0.0625rem solid #2578CE;
   -webkit-box-shadow: 0 0 0.125rem 0 #2578CE;
   -moz-box-shadow: 0 0 0.125rem 0 #2578CE;
   box-shadow: 0 0 0.125rem 0 #2578CE;
 }
-.z-textarea:not(:disabled):hover {
+.z-textarea:not(:disabled):hover, .z-textarea:not(:read-only):hover {
   outline: 0;
   border: 0.0625rem solid #64BBF6;
 }
-.z-textarea:not(:disabled):active {
+.z-textarea:not(:disabled):active, .z-textarea:not(:read-only):active {
   outline: 0;
-  border: 0.0625rem solid #339AF0;
+  border: 0.0625rem solid #2578CE;
+}
+.z-textarea:read-only:not(.os-host-textarea) {
+  background-color: #FFFFFF;
+  border: none;
+  border-left: 0.0625rem solid #ABB0B5;
+  border-radius: 0;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  pointer-events: none;
+  cursor: default;
+  resize: none;
 }
 .z-textarea:disabled {
   color: #ABB0B5;
   background-color: #EEEEEE;
-  pointer-events: none;
-  cursor: default;
-}
-.z-textarea:read-only:not(.os-host-textarea) {
-  border-color: #ABB0B5;
-  border-style: none none none solid;
-  border-radius: 0;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  background-color: #FFFFFF;
+  border: 0.0625rem solid #CFD5D9;
   pointer-events: none;
   cursor: default;
 }
@@ -2166,6 +2123,7 @@ label {
   width: 1.125rem;
   height: 1.125rem;
   background-color: #FFFFFF;
+  border: 0.0625rem solid #8B9094;
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -2175,7 +2133,7 @@ label {
 }
 .z-switch input[type=checkbox]:checked + span {
   background-color: #339AF0;
-  border-color: #2578CE;
+  border: 0.0625rem solid #2578CE;
 }
 .z-switch input[type=checkbox]:checked + span::before {
   -webkit-transform: translate(1.3125rem, 0);
@@ -2186,7 +2144,7 @@ label {
 }
 .z-switch input[type=checkbox]:disabled + span {
   background-color: #E0E0E0;
-  border-color: #CFD5D9;
+  border: 0.0625rem solid #CFD5D9;
 }
 .z-switch input[type=checkbox]:disabled + span::before {
   background-color: #F5F5F5;
@@ -2258,12 +2216,16 @@ select {
   outline: 0;
   border: 0.0625rem solid #64BBF6;
 }
-.z-select .z-select-box:not(.readonly).active {
+.z-select .z-select-box:not(.readonly):focus {
   outline: 0;
   border: 0.0625rem solid #2578CE;
   -webkit-box-shadow: 0 0 0.125rem 0 #2578CE;
   -moz-box-shadow: 0 0 0.125rem 0 #2578CE;
   box-shadow: 0 0 0.125rem 0 #2578CE;
+}
+.z-select .z-select-box:not(.readonly).active {
+  outline: 0;
+  border: 0.0625rem solid #2578CE;
 }
 .z-select .z-select-box:not(.readonly).active .z-icon.i-arrow-right {
   -webkit-transform: rotate(-90deg);
@@ -2288,20 +2250,20 @@ select {
   -ms-transform: rotate(90deg);
   transform: rotate(90deg);
 }
-.z-select .z-select-box.disabled-select {
-  border: 0.0625rem solid #CFD5D9;
-  background-color: #EEEEEE;
-  color: #ABB0B5;
-  pointer-events: none;
-  cursor: default;
-}
 .z-select .z-select-box.readonly {
-  border: 0.0625rem solid #ABB0B5;
-  border-style: none none none solid;
   background-color: #FFFFFF;
+  border: none;
+  border-left: 0.0625rem solid #ABB0B5;
   border-radius: 0;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
+  pointer-events: none;
+  cursor: default;
+}
+.z-select .z-select-box.disabled-select {
+  color: #ABB0B5;
+  background-color: #EEEEEE;
+  border: 0.0625rem solid #CFD5D9;
   pointer-events: none;
   cursor: default;
 }
@@ -2345,7 +2307,7 @@ select {
   word-wrap: normal;
 }
 .z-select .z-select-options li:hover {
-  background: #F1F9FC;
+  background: #E3F5FC;
 }
 .z-select .z-select-options li[rel=hide] {
   display: none;
@@ -2356,8 +2318,8 @@ select {
 .z-select .z-select-options .selected:after {
   position: absolute;
   right: 0.9375rem;
-  width: 10px;
-  height: 7px;
+  width: 0.625rem;
+  height: 0.438rem;
   background-image: url("../media/icons/icon_select_check.svg");
   background-size: auto;
   background-repeat: no-repeat;
@@ -2491,13 +2453,7 @@ select {
   background-color: #FFFFFF;
   vertical-align: middle;
 }
-.z-checkbox input[type=checkbox]:not(:disabled) + span {
-  cursor: pointer;
-}
-.z-checkbox input[type=checkbox]:not(:disabled) ~ .z-label {
-  cursor: pointer;
-}
-.z-checkbox input[type=checkbox]:not(:disabled):checked + span::after {
+.z-checkbox input[type=checkbox]:checked + span::after {
   content: "";
   position: absolute;
   top: 0.125rem;
@@ -2517,30 +2473,39 @@ select {
   -ms-transform: translate(0.1875rem, 0.25rem) rotate(-45deg);
   transform: translate(0.1875rem, 0.25rem) rotate(-45deg);
 }
-.z-checkbox input[type=checkbox]:not(:disabled):hover + span::before {
-  border-color: #64BBF6;
-  background-color: rgba(0, 152, 255, 0.08);
+.z-checkbox input[type=checkbox]:not(:disabled) + span, .z-checkbox input[type=checkbox]:not(.readonly) + span {
+  cursor: pointer;
 }
-.z-checkbox input[type=checkbox]:disabled + span::before {
+.z-checkbox input[type=checkbox]:not(:disabled) ~ .z-label, .z-checkbox input[type=checkbox]:not(.readonly) ~ .z-label {
+  cursor: pointer;
+}
+.z-checkbox input[type=checkbox]:not(:disabled):hover + span::before, .z-checkbox input[type=checkbox]:not(.readonly):hover + span::before {
+  border-color: #64BBF6;
+  background-color: #E3F5FC;
+}
+.z-checkbox input[type=checkbox]:disabled + span::before, .z-checkbox input[type=checkbox].readonly + span::before {
   background-color: #EEEEEE;
 }
-.z-checkbox input[type=checkbox]:disabled + span::after {
+.z-checkbox input[type=checkbox]:disabled + span::after, .z-checkbox input[type=checkbox].readonly + span::after {
   border-color: #ABB0B5;
 }
-.z-checkbox input[type=checkbox]:disabled ~ .z-label {
+.z-checkbox input[type=checkbox]:disabled ~ .z-label, .z-checkbox input[type=checkbox].readonly ~ .z-label {
   color: #ABB0B5;
 }
-.z-checkbox:focus input[type=checkbox]:not(:disabled) + span:before {
+.z-checkbox:focus input[type=checkbox]:not(:disabled) + span:before,
+.z-checkbox:focus input[type=checkbox]:not(.readonly) + span:before {
   border-color: #2578CE;
   -webkit-box-shadow: 0 0 0.0625rem 0 #2578CE;
   -moz-box-shadow: 0 0 0.0625rem 0 #2578CE;
   box-shadow: 0 0 0.0625rem 0 #2578CE;
 }
-.z-checkbox:active input[type=checkbox]:not(:disabled) + span:before {
+.z-checkbox:active input[type=checkbox]:not(:disabled) + span:before,
+.z-checkbox:active input[type=checkbox]:not(.readonly) + span:before {
   border-color: #2578CE;
   background-color: #ADE6FD;
 }
-.z-checkbox:active input[type=checkbox]:not(:disabled) + span:after {
+.z-checkbox:active input[type=checkbox]:not(:disabled) + span:after,
+.z-checkbox:active input[type=checkbox]:not(.readonly) + span:after {
   border-color: #1959AC;
 }
 
@@ -2589,16 +2554,16 @@ select {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
 }
-.z-radio input[type=radio]:not(:disabled) + span {
+.z-radio input[type=radio]:not(:disabled) + span, .z-radio input[type=radio]:not(.readonly) + span {
   cursor: pointer;
 }
-.z-radio input[type=radio]:not(:disabled) ~ .z-label {
+.z-radio input[type=radio]:not(:disabled) ~ .z-label, .z-radio input[type=radio]:not(.readonly) ~ .z-label {
   cursor: pointer;
 }
-.z-radio input[type=radio]:not(:disabled):checked + span::before {
+.z-radio input[type=radio]:not(:disabled):checked + span::before, .z-radio input[type=radio]:not(.readonly):checked + span::before {
   border-color: #CFD5D9;
 }
-.z-radio input[type=radio]:not(:disabled):checked + span::after {
+.z-radio input[type=radio]:not(:disabled):checked + span::after, .z-radio input[type=radio]:not(.readonly):checked + span::after {
   background-color: #339AF0;
   -webkit-transform: translate(4px, 9px) scale(1);
   -moz-transform: translate(4px, 9px) scale(1);
@@ -2606,18 +2571,18 @@ select {
   -ms-transform: translate(4px, 9px) scale(1);
   transform: translate(4px, 9px) scale(1);
 }
-.z-radio input[type=radio]:not(:disabled):hover + span::before {
+.z-radio input[type=radio]:not(:disabled):hover + span::before, .z-radio input[type=radio]:not(.readonly):hover + span::before {
   border-color: #64BBF6;
-  background-color: rgba(0, 152, 255, 0.08);
+  background-color: #E3F5FC;
 }
-.z-radio input[type=radio]:disabled + span::before {
+.z-radio input[type=radio]:disabled + span::before, .z-radio input[type=radio].readonly + span::before {
   border-color: #CFD5D9;
   background-color: #EEEEEE;
 }
-.z-radio input[type=radio]:disabled ~ .z-label {
+.z-radio input[type=radio]:disabled ~ .z-label, .z-radio input[type=radio].readonly ~ .z-label {
   color: #ABB0B5;
 }
-.z-radio input[type=radio]:disabled:checked + span::after {
+.z-radio input[type=radio]:disabled:checked + span::after, .z-radio input[type=radio].readonly:checked + span::after {
   background-color: #ABB0B5;
   -webkit-transform: translate(4px, 9px) scale(1);
   -moz-transform: translate(4px, 9px) scale(1);
@@ -2625,17 +2590,20 @@ select {
   -ms-transform: translate(4px, 9px) scale(1);
   transform: translate(4px, 9px) scale(1);
 }
-.z-radio:focus input[type=radio]:not(:disabled) + span:before {
+.z-radio:focus input[type=radio]:not(:disabled) + span:before,
+.z-radio:focus input[type=radio]:not(.readonly) + span:before {
   border-color: #2578CE;
   -webkit-box-shadow: 0 0 0.125rem 0 #2578CE;
   -moz-box-shadow: 0 0 0.125rem 0 #2578CE;
   box-shadow: 0 0 0.125rem 0 #2578CE;
 }
-.z-radio:active input[type=radio]:not(:disabled) + span:before {
+.z-radio:active input[type=radio]:not(:disabled) + span:before,
+.z-radio:active input[type=radio]:not(.readonly) + span:before {
   border-color: #2578CE;
   background-color: #ADE6FD;
 }
-.z-radio:active input[type=radio]:not(:disabled) + span::after {
+.z-radio:active input[type=radio]:not(:disabled) + span::after,
+.z-radio:active input[type=radio]:not(.readonly) + span::after {
   background-color: #1959AC;
   -webkit-transform: translate(4px, 9px) scale(1);
   -moz-transform: translate(4px, 9px) scale(1);
@@ -4767,7 +4735,7 @@ select {
 }
 .ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-label:hover,
 .ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-item:hover {
-  background-color: rgba(0, 152, 255, 0.08);
+  background-color: #E3F5FC;
 }
 .ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-label:focus,
 .ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-header .ql-picker-item:focus {
@@ -4841,7 +4809,7 @@ select {
 }
 .ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-label:hover {
   color: #222529;
-  background-color: rgba(0, 152, 255, 0.08);
+  background-color: #E3F5FC;
 }
 .ql-wrapper-container .ql-toolbar.ql-snow .ql-formats .ql-color-picker .ql-picker-label:focus {
   color: #2578CE;
@@ -4895,7 +4863,7 @@ select {
 }
 .ql-wrapper-container .ql-toolbar.ql-snow .ql-formats button:hover {
   color: #222529;
-  background-color: rgba(0, 152, 255, 0.08);
+  background-color: #E3F5FC;
 }
 .ql-wrapper-container .ql-toolbar.ql-snow .ql-formats button:focus {
   color: #2578CE;
@@ -4926,6 +4894,15 @@ select {
 .ql-wrapper-container .ql-toolbar-hidden {
   display: none;
 }
+.ql-wrapper-container .ql-toolbar-readonly button.ql-active {
+  color: #ABB0B5 !important;
+}
+.ql-wrapper-container .ql-toolbar-readonly button.ql-active .ql-icon {
+  fill: #ABB0B5 !important;
+}
+.ql-wrapper-container .ql-toolbar-readonly button.ql-active:after {
+  background: transparent !important;
+}
 .ql-wrapper-container .ql-container.ql-snow {
   height: auto;
   font-family: "맑은고딕", "Malgun Gothic", "Noto Sans KR", dotum, gulim, sans-serif;
@@ -4951,37 +4928,38 @@ select {
 .ql-wrapper-container .ql-container.ql-snow .ql-editor strong {
   font-weight: bold;
 }
+.ql-wrapper-container .ql-container.error {
+  border: 0.0625rem solid #F52525;
+}
 .ql-wrapper-container.ql-border-disabled .ql-toolbar.ql-snow {
   border-color: transparent;
 }
 .ql-wrapper-container.ql-border-disabled .ql-container.ql-snow {
   border-color: transparent;
 }
-.ql-wrapper-container:hover {
+.ql-wrapper-container:hover:not(.ql-readonly) {
   outline: 0;
 }
-.ql-wrapper-container:hover .ql-toolbar.ql-snow {
+.ql-wrapper-container:hover:not(.ql-readonly) .ql-toolbar.ql-snow {
   border-color: #64BBF6;
 }
-.ql-wrapper-container:hover .ql-container.ql-snow:not(.ql-disabled) {
+.ql-wrapper-container:hover:not(.ql-readonly) .ql-container.ql-snow:not(.ql-disabled) {
   border-color: #64BBF6;
 }
-.ql-wrapper-container:focus {
+.ql-wrapper-container:focus:not(.ql-readonly) {
   outline: 0;
   -webkit-box-shadow: 0 0 0.125rem 0 #2578CE;
   -moz-box-shadow: 0 0 0.125rem 0 #2578CE;
   box-shadow: 0 0 0.125rem 0 #2578CE;
 }
-.ql-wrapper-container:focus .ql-toolbar.ql-snow {
+.ql-wrapper-container:focus:not(.ql-readonly) .ql-toolbar.ql-snow {
   border-color: #2578CE;
 }
-.ql-wrapper-container:focus .ql-container.ql-snow {
+.ql-wrapper-container:focus:not(.ql-readonly) .ql-container.ql-snow {
   border-color: #2578CE;
 }
-
-.ql-container.error {
-  color: #ff405a !important;
-  border: 0.0625rem solid #ff405a !important;
+.ql-wrapper-container.ql-readonly {
+  pointer-events: none;
 }
 
 /* _color-picker.scss 
@@ -5731,7 +5709,6 @@ body.modal-active {
 .z-group-tooltip[data-displaytype="document.displayType.hidden"] {
   display: none;
 }
-
 .z-group-accordion-checkBox {
   position: absolute;
   opacity: 0;
