--- a/src/main/resources/public/scss/template/_color-picker.scss
+++ b/src/main/resources/public/scss/template/_color-picker.scss
@@ -171,7 +171,7 @@
             line-height: 0.3125rem; // 5px
             @include absolute($top: -0.25rem,$right: -0.25rem); // -4px -4px
             @include borderRadius(50%);
-            background-color: $error-color;
+            background-color: $validation-error-font-color;
             padding: 0;
             visibility: hidden;
 
