--- a/src/main/resources/public/template/login.html
+++ b/src/main/resources/public/template/login.html
@@ -40,10 +40,12 @@
                     </div>
                     <button class="z-button primary col-pct-12" id="sendLogin" th:text="#{login.btn.login}" onclick="onLogin()"></button>
                 </div>
-                <div class="login-divide flex-row align-items-center" th:text="#{login.label.or}"></div>
-                <div class="login-platform">
-                    <button class="z-button google col-pct-12" id="google" th:text="#{login.btn.googleLogin}" onclick="onPlatFormLogin(this.id)"></button>
-                    <button class="z-button kakao col-pct-12" id="kakao" th:text="#{login.btn.kakaoLogin}" onclick="onPlatFormLogin(this.id)"></button>
+                <div th:if="${isLoingPlatform}">
+                    <div class="login-divide flex-row align-items-center" th:text="#{login.label.or}"></div>
+                    <div class="login-platform">
+                        <button class="z-button google col-pct-12" id="google" th:text="#{login.btn.googleLogin}" onclick="onPlatFormLogin(this.id)"></button>
+                        <button class="z-button kakao col-pct-12" id="kakao" th:text="#{login.btn.kakaoLogin}" onclick="onPlatFormLogin(this.id)"></button>
+                    </div>
                 </div>
                 <div class="login-other flex-row justify-content-center align-items-center">
                     <div class="login-other-signUp"><a href="/certification/signup" th:text="#{login.label.signupNote}"></a></div>
