--- a/src/main/resources/public/scss/formDesigner/_layout.scss
+++ b/src/main/resources/public/scss/formDesigner/_layout.scss
@@ -328,7 +328,7 @@
           }
           // 텍스트 에디터 컴포넌트
           .ql-toolbar.ql-snow,
-          .ql-container.ql-snow woo{
+          .ql-container.ql-snow {
             border-color: $component-icon-drag-border-color !important;
             .ql-picker {
               color: $component-icon-drag-font-color !important;
