--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -1355,6 +1355,7 @@ label {
 }
 .z-input:read-only:not(.tagify) {
   background-color: #FFFFFF;
+  background-image: none;
   border: none;
   border-left: 0.0625rem solid #ABB0B5;
   border-radius: 0;
@@ -1565,6 +1566,7 @@ label {
   width: 1.125rem;
   height: 1.125rem;
   background-color: #FFFFFF;
+  border: 0.0625rem solid #8B9094;
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -1574,7 +1576,7 @@ label {
 }
 .z-switch input[type=checkbox]:checked + span {
   background-color: #339AF0;
-  border-color: #2578CE;
+  border: 0.0625rem solid #2578CE;
 }
 .z-switch input[type=checkbox]:checked + span::before {
   -webkit-transform: translate(1.3125rem, 0);
@@ -1585,7 +1587,7 @@ label {
 }
 .z-switch input[type=checkbox]:disabled + span {
   background-color: #E0E0E0;
-  border-color: #CFD5D9;
+  border: 0.0625rem solid #CFD5D9;
 }
 .z-switch input[type=checkbox]:disabled + span::before {
   background-color: #F5F5F5;
@@ -1657,12 +1659,16 @@ select {
   outline: 0;
   border: 0.0625rem solid #64BBF6;
 }
-.z-select .z-select-box:not(.readonly).active {
+.z-select .z-select-box:not(.readonly):focus {
   outline: 0;
   border: 0.0625rem solid #2578CE;
   -webkit-box-shadow: 0 0 0.125rem 0 #2578CE;
   -moz-box-shadow: 0 0 0.125rem 0 #2578CE;
   box-shadow: 0 0 0.125rem 0 #2578CE;
+}
+.z-select .z-select-box:not(.readonly).active {
+  outline: 0;
+  border: 0.0625rem solid #2578CE;
 }
 .z-select .z-select-box:not(.readonly).active .z-icon.i-arrow-right {
   -webkit-transform: rotate(-90deg);
@@ -1687,20 +1693,20 @@ select {
   -ms-transform: rotate(90deg);
   transform: rotate(90deg);
 }
-.z-select .z-select-box.disabled-select {
-  border: 0.0625rem solid #CFD5D9;
-  background-color: #EEEEEE;
-  color: #ABB0B5;
-  pointer-events: none;
-  cursor: default;
-}
 .z-select .z-select-box.readonly {
-  border: 0.0625rem solid #ABB0B5;
-  border-style: none none none solid;
   background-color: #FFFFFF;
+  border: none;
+  border-left: 0.0625rem solid #ABB0B5;
   border-radius: 0;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
+  pointer-events: none;
+  cursor: default;
+}
+.z-select .z-select-box.disabled-select {
+  color: #ABB0B5;
+  background-color: #EEEEEE;
+  border: 0.0625rem solid #CFD5D9;
   pointer-events: none;
   cursor: default;
 }
@@ -1744,7 +1750,7 @@ select {
   word-wrap: normal;
 }
 .z-select .z-select-options li:hover {
-  background: #F1F9FC;
+  background: #E3F5FC;
 }
 .z-select .z-select-options li[rel=hide] {
   display: none;
@@ -1755,8 +1761,8 @@ select {
 .z-select .z-select-options .selected:after {
   position: absolute;
   right: 0.9375rem;
-  width: 10px;
-  height: 7px;
+  width: 0.625rem;
+  height: 0.438rem;
   background-image: url("../media/icons/icon_select_check.svg");
   background-size: auto;
   background-repeat: no-repeat;
@@ -1918,25 +1924,16 @@ select {
 }
 .z-checkbox input[type=checkbox]:not(:disabled):hover + span::before, .z-checkbox input[type=checkbox]:not(.readonly):hover + span::before {
   border-color: #64BBF6;
-  background-color: rgba(0, 152, 255, 0.08);
+  background-color: #E3F5FC;
 }
-.z-checkbox input[type=checkbox]:disabled + span::before {
+.z-checkbox input[type=checkbox]:disabled + span::before, .z-checkbox input[type=checkbox].readonly + span::before {
   background-color: #EEEEEE;
 }
-.z-checkbox input[type=checkbox]:disabled + span::after {
+.z-checkbox input[type=checkbox]:disabled + span::after, .z-checkbox input[type=checkbox].readonly + span::after {
   border-color: #ABB0B5;
 }
-.z-checkbox input[type=checkbox]:disabled ~ .z-label {
+.z-checkbox input[type=checkbox]:disabled ~ .z-label, .z-checkbox input[type=checkbox].readonly ~ .z-label {
   color: #ABB0B5;
-}
-.z-checkbox input[type=checkbox].readonly + span::before {
-  background-color: #FFFFFF;
-}
-.z-checkbox input[type=checkbox].readonly + span::after {
-  border-color: #ABB0B5;
-}
-.z-checkbox input[type=checkbox].readonly ~ .z-label {
-  color: #222529;
 }
 .z-checkbox:focus input[type=checkbox]:not(:disabled) + span:before,
 .z-checkbox:focus input[type=checkbox]:not(.readonly) + span:before {
@@ -2000,16 +1997,16 @@ select {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
 }
-.z-radio input[type=radio]:not(:disabled) + span {
+.z-radio input[type=radio]:not(:disabled) + span, .z-radio input[type=radio]:not(.readonly) + span {
   cursor: pointer;
 }
-.z-radio input[type=radio]:not(:disabled) ~ .z-label {
+.z-radio input[type=radio]:not(:disabled) ~ .z-label, .z-radio input[type=radio]:not(.readonly) ~ .z-label {
   cursor: pointer;
 }
-.z-radio input[type=radio]:not(:disabled):checked + span::before {
+.z-radio input[type=radio]:not(:disabled):checked + span::before, .z-radio input[type=radio]:not(.readonly):checked + span::before {
   border-color: #CFD5D9;
 }
-.z-radio input[type=radio]:not(:disabled):checked + span::after {
+.z-radio input[type=radio]:not(:disabled):checked + span::after, .z-radio input[type=radio]:not(.readonly):checked + span::after {
   background-color: #339AF0;
   -webkit-transform: translate(4px, 9px) scale(1);
   -moz-transform: translate(4px, 9px) scale(1);
@@ -2017,18 +2014,18 @@ select {
   -ms-transform: translate(4px, 9px) scale(1);
   transform: translate(4px, 9px) scale(1);
 }
-.z-radio input[type=radio]:not(:disabled):hover + span::before {
+.z-radio input[type=radio]:not(:disabled):hover + span::before, .z-radio input[type=radio]:not(.readonly):hover + span::before {
   border-color: #64BBF6;
-  background-color: rgba(0, 152, 255, 0.08);
+  background-color: #E3F5FC;
 }
-.z-radio input[type=radio]:disabled + span::before {
+.z-radio input[type=radio]:disabled + span::before, .z-radio input[type=radio].readonly + span::before {
   border-color: #CFD5D9;
   background-color: #EEEEEE;
 }
-.z-radio input[type=radio]:disabled ~ .z-label {
+.z-radio input[type=radio]:disabled ~ .z-label, .z-radio input[type=radio].readonly ~ .z-label {
   color: #ABB0B5;
 }
-.z-radio input[type=radio]:disabled:checked + span::after {
+.z-radio input[type=radio]:disabled:checked + span::after, .z-radio input[type=radio].readonly:checked + span::after {
   background-color: #ABB0B5;
   -webkit-transform: translate(4px, 9px) scale(1);
   -moz-transform: translate(4px, 9px) scale(1);
@@ -2036,17 +2033,20 @@ select {
   -ms-transform: translate(4px, 9px) scale(1);
   transform: translate(4px, 9px) scale(1);
 }
-.z-radio:focus input[type=radio]:not(:disabled) + span:before {
+.z-radio:focus input[type=radio]:not(:disabled) + span:before,
+.z-radio:focus input[type=radio]:not(.readonly) + span:before {
   border-color: #2578CE;
   -webkit-box-shadow: 0 0 0.125rem 0 #2578CE;
   -moz-box-shadow: 0 0 0.125rem 0 #2578CE;
   box-shadow: 0 0 0.125rem 0 #2578CE;
 }
-.z-radio:active input[type=radio]:not(:disabled) + span:before {
+.z-radio:active input[type=radio]:not(:disabled) + span:before,
+.z-radio:active input[type=radio]:not(.readonly) + span:before {
   border-color: #2578CE;
   background-color: #ADE6FD;
 }
-.z-radio:active input[type=radio]:not(:disabled) + span::after {
+.z-radio:active input[type=radio]:not(:disabled) + span::after,
+.z-radio:active input[type=radio]:not(.readonly) + span::after {
   background-color: #1959AC;
   -webkit-transform: translate(4px, 9px) scale(1);
   -moz-transform: translate(4px, 9px) scale(1);
